refactor of package largely complete. Also updated python wrapper. Harness next

--- a/package/Makefile
+++ b/package/Makefile
@@ -1,26 +1,36 @@
 OPTIM = -O3 -fno-loop-optimize -fno-aggressive-loop-optimizations
-DEBUG = -g
-WARN_FLAGS = -Wall -W -Wwrite-strings -Winline -Wstrict-prototypes -Wnested-externs -Wpointer-arith -Wcast-align -Wcast-qual -Wshadow
-DEFINES = -DTESTING -DCA_N_U=20 -DCA_N_V=6 -DTESTING_LSQ_PACKAGE
+CONF_DEBUG = -O0 -g -DDEBUG -DAS_N_U=20 -DAS_N_V=6 -DAS_SINGLE_FLOAT -DAS_AS_RECORD_COST -DAS_AS_RECORD_COST_N=15 -DAS_COST_TRUNCATE
+CONF_SINGLE = $(OPTIM) -DAS_N_U=20 -DAS_N_V=6 -DAS_SINGLE_FLOAT -DAS_COST_TRUNCATE
+CONF_DOUBLE = $(OPTIM) -DAS_N_U=20 -DAS_N_V=6 -DAS_COST_TRUNCATE
+
+CONF?=DOUBLE
+ifeq ($(CONF), DOUBLE)
+CONF_OPTIONS = $(CONF_DOUBLE)
+else ifeq ($(CONF), SINGLE)
+CONF_OPTIONS = $(CONF_SINGLE)
+else ifeq ($(CONF), DEBUG)
+CONF_OPTIONS = $(CONF_DEBUG)
+else
+$(error only allow DOUBLE, SINGLE, DEBUG as CONF choices)
+endif
 
 CC = gcc
-CC_FLAGS = -fstack-usage -fwrapv -fPIC $(WARN_FLAGS) $(DEBUG) $(OPTIM)
+WARN_FLAGS = -Wall -W -Wwrite-strings -Winline -Wstrict-prototypes -Wnested-externs -Wpointer-arith -Wcast-align -Wcast-qual -Wshadow
+CC_FLAGS = -fstack-usage -fwrapv -fPIC $(WARN_FLAGS) $(CONF_OPTIONS)
 LINK_FLAGS = -lm
 AR = ar
 ARFLAGS = ruvs
 PRODUCT = solveActiveSet.so
 BIN_DIR = ./bin
 INCLUDES = -Icommon/ -Ilib/
-SOURCES = solveActiveSet.c solveActiveSet_cg.c solveActiveSet_chol.c solveActiveSet_qr.c solveActiveSet_pprz.c common/setup_wls.c lib/chol_math.c lib/qr_updates.c lib/qr_wrapper.c lib/qr_solve/qr_solve.c lib/qr_solve/r8lib_min.c lib/sparse_math.c
+SOURCES = common/solveActiveSet.c solveActiveSet_cg.c solveActiveSet_chol.c solveActiveSet_qr.c solveActiveSet_qr_naive.c common/setupWLS.c lib/chol_math.c lib/qr_updates.c lib/qr_wrapper.c lib/qr_solve/qr_solve.c lib/qr_solve/r8lib_min.c lib/sparse_math.c
 
-#all: $(patsubst %, $(BIN_DIR)/%.o, $(basename $(SOURCES)))
-#	$(AR) $(ARFLAGS) $(BIN_DIR)/$(PRODUCT) $?
 all: $(BIN_DIR)/$(PRODUCT)
-	$(CC) $(CC_FLAGS) -o $(BIN_DIR)/main.o main.c $(BIN_DIR)/$(PRODUCT) $(DEFINES) $(INCLUDES) $(LINK_FLAGS)
+	$(CC) $(CC_FLAGS) -o $(BIN_DIR)/main.o main.c $(BIN_DIR)/$(PRODUCT) $(INCLUDES) $(LINK_FLAGS)
 
 $(BIN_DIR)/$(PRODUCT) : $(SOURCES)
 	@mkdir -p $(dir $@)
-	$(CC) -shared $(CC_FLAGS) -o $@ $(DEFINES) $(DEBUG) $(WARN_FLAGS) $(INCLUDES) $^
+	$(CC) -shared $(CC_FLAGS) -o $@ $(WARN_FLAGS) $(INCLUDES) $^
 
 clean:
 	@rm -rf *.o
