--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "solveactiveset.h": "c"
+        "solveactiveset.h": "c",
+        "setupwls.h": "c"
     }
 }
